[package]
name = "usdt-libbpf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = { git = "https://github.com/ueno/libbpf-rs.git", rev = "d88e9620077eb21e63b9997ac77220b4f5e3b139" }
clap = { version = "3", features=["derive"] }
anyhow = "1.0"
libc = "0.2"

[build-dependencies]
libbpf-cargo = { git = "https://github.com/ueno/libbpf-rs.git", rev = "d88e9620077eb21e63b9997ac77220b4f5e3b139" }
