[package]
name = "usdt-libbpf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs.git", rev = "bf362ab6612959f2a89d4833b00023d1bd115c6d" }
libbpf-async = { git = "https://github.com/ueno/libbpf-async.git", branch = "wip/dueno/usdt" }
clap = { version = "3", features=["derive"] }
anyhow = "1.0"
libc = "0.2"
tokio = "1.21.2"
tokio-uring = "0.3.0"

[build-dependencies]
libbpf-cargo = { git = "https://github.com/libbpf/libbpf-rs.git", rev = "bf362ab6612959f2a89d4833b00023d1bd115c6d" }
